# sXPS

./: .gitignore  README.md  pyproject.toml
core/: analysis.py  plot_settings.toml
sXPS/: __init__.py  analysis.py
